<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:lineSpacingExtra="12sp"
        android:text="@string/time_tracker_title"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083" />

    <TextView
        android:id="@+id/tt_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-condensed-light"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tt_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tt_logo"
        app:layout_constraintVertical_bias="0.493" />

    <Switch
        android:id="@+id/tt_switch"
        android:layout_width="181dp"
        android:layout_height="55dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/shake_activated"
        android:textColorLink="#FF632526"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tt_calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.855" />

    <ImageView
        android:id="@+id/tt_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/sigmalogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tt_name"
        app:layout_constraintHorizontal_bias="0.716"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067"
        app:srcCompat="@drawable/sigma_logo" />

    <CalendarView
        android:id="@+id/tt_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusedMonthDateColor="#FF632526"
        android:selectedWeekBackgroundColor="#FF632526"
        android:textColorPrimary="#FF632526"
        android:unfocusedMonthDateColor="#FFFFFF"
        android:weekNumberColor="#FF632526"
        android:weekSeparatorLineColor="#FF632526"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tt_name"
        app:layout_constraintVertical_bias="1.0" />

    <ToggleButton
        android:id="@+id/tt_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/my_button_bg"
        android:fontFamily="sans-serif-condensed-light"
        android:paddingLeft="5px"
        android:paddingTop="5px"
        android:paddingRight="5px"
        android:paddingBottom="5px"
        android:textAllCaps="false"
        android:textOff="@string/start"
        android:textOn="@string/stop"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/tt_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tt_date"
        app:layout_constraintVertical_bias="0.393" />


</androidx.constraintlayout.widget.ConstraintLayout>